# cpp-linter-action

./: .ci-ignore  .coveragerc  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  404.html  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  action-setup.sh  action.yaml  action.yml  badge_hook.py  book.toml  color-requirements.txt  coverage.json  cspell.config.yml  gen_io_doc.py  index.html  index.js  main.c  main.h  mkdocs.yml  mypy.ini  objects.inv  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_checks.py  runchecks.sh  setup.py  setup.sh  (+3 more)
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature-request.yml  feature_request.md  maintainers-only.md
.github/workflows/: build-docs.yml  codeql.yml  cpp-linter.yml  labeler.yml  mkdocs-deploy.yml  pre-commit.yml  publish-pypi.yml  release-drafter.yml  release.yml  run-dev-tests.yml  run-pre-commit.yml  run-pylint.yml  run-test-action.yml  run-test.yml  self-test.yml  stale.yml  test.yml  trigger-workflow.yml  used-by.yml
.github/workflows/examples/: auto-fix.yml  only-PR-comments.yml  only-clang-format.yml  only-clang-tidy.yml
API Reference/cpp_linter/: index.html
API Reference/cpp_linter.clang_format_xml/: index.html
API Reference/cpp_linter.clang_tidy/: index.html
API Reference/cpp_linter.clang_tidy_yml/: index.html
API Reference/cpp_linter.run/: index.html
API Reference/cpp_linter.thread_comments/: index.html
contributing-guidelines/: index.html
cpp_linter/: __init__.py  clang_format_xml.py  clang_tidy.py  clang_tidy_yml.py  run.py  thread_comments.py
demo/: .clang-format  .clang-tidy  compile_commands.json  demo.cpp  demo.h  demo.hpp
docs/: README.md  README.rst  SUMMARY.md  action.yml  badge_hook.py  contributing-guidelines.md  gen_io_doc.py  index.md  inputs-outputs.md  permissions.md  pr-review-caveats.md  requirements.txt
docs/API Reference/: cpp_linter.clang_format_xml.md  cpp_linter.clang_tidy.md  cpp_linter.clang_tidy_yml.md  cpp_linter.md  cpp_linter.run.md  cpp_linter.thread_comments.md  python_action.clang_format_xml.md  python_action.clang_tidy.md  python_action.clang_tidy_yml.md  python_action.md  python_action.run.md  python_action.thread_comments.md
docs/examples/: index.md  only-PR-comments.yml  only-clang-format.yml
docs/examples/demo/: CMakeLists.txt  demo.hpp
docs/stylesheets/: extra.css
examples/: index.html
examples/demo/: compile_flags.txt  demo.cpp
images/: icon_large.xcf
inputs-outputs/: index.html
parse_out/: clang_format.py  clang_tidy.py
permissions/: index.html
pr-review-caveats/: index.html
python_action/: __init__.py  clang_format_xml.py  clang_tidy.py  clang_tidy_yml.py  run.py  thread_comments.py
search/: search_index.json
src/: venv.sh
stylesheets/: extra.css
tests/: test_cli_args.py  test_misc.py
tests/capture_tools_output/: .clang-tidy  event_files.json  expected_result.json  test_database_path.py  test_tools_output.py
tests/database_path/: test_database_path.py
tests/ignored_paths/: .gitmodules  test_ignored_paths.py
tests/lines_changed_only/: .clang-format  expected_result.json  files.json  test_lines_changed_only.py
