[project]
name = "cpp-linter-action"
version = "0.0.0+private_virtual"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
action = [
    "clang-tools==0.17.0",
    "cpp-linter==1.12.1",
]
dev = [
    "mypy>=1.20.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
]
docs = [
    "markdown-gfm-admonition>=0.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-material>=9.6.16",
    "pyyaml>=6.0.2",
]
