[project]
name = "cpp-linter-action"
version = "0.0.0+private_virtual"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
action = [
    "clang-tools==1.2.0",
    "cpp-linter==1.13.0",
]
dev = [
    "mypy>=2.3.0",
    "pre-commit>=4.6.1",
    "ruff>=0.15.22",
]
docs = [
    "markdown-gfm-admonition>=0.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin>=7.3.0",
    "mkdocs-material>=9.7.7",
    "pyyaml>=6.0.2",
]
